# pytest_api_testing

./: .env-example  .gitignore  .pre-commit-config.yaml  config.py  pyproject.toml  pytest.ini  readme.md  tasks.py
src/api_clients/: base_client.py
src/helpers/: bdd_handler.py  email_helper.py  logging_helper.py  request.py  utils.py
src/pages/: base_dom_actions.py
tests/: conftest.py
